# mucol-targetstudy

./: .gitignore  pyproject.toml
calculations/.ipynb_checkpoints/: PionMomentumRange-checkpoint.ipynb
fieldmap/: SolChannelFm.g4bl  makeFieldMap.py  makefmcylinder.ipynb  makefmgrid.ipynb
fieldmap/BfieldDatasets/: flukacylinder.inp
fieldmap/Bfield_flukaDatasets/: B10L200R70_flukaCylinder.inp  B10L200R70_flukaGrid.inp  B10L250R70_flukaCylinder.inp  B10L250R70_flukaGrid.inp  B10L300R70_flukaCylinder.inp  B10L300R70_flukaGrid.inp  B3L200R70_flukaCylinder.inp  B3L200R70_flukaGrid.inp  B3L300R70_flukaCylinder.inp  B3L300R70_flukaGrid.inp  B4L200R70_flukaCylinder.inp  B4L200R70_flukaGrid.inp  B4L300R70_flukaCylinder.inp  B4L300R70_flukaGrid.inp  B5L1000R70_flukaCylinder.inp  B5L1000R70_flukaGrid.inp  B5L200R70_flukaCylinder.inp  B5L200R70_flukaGrid.inp  B5L300R70_flukaCylinder.inp  B5L300R70_flukaGrid.inp  B5L400R70_flukaCylinder.inp  B5L400R70_flukaGrid.inp  B5L500R70_flukaCylinder.inp  B5L500R70_flukaGrid.inp  B5L600R70_flukaCylinder.inp  B5L600R70_flukaGrid.inp  B5L700R70_flukaCylinder.inp  B5L700R70_flukaGrid.inp  B5L800R70_flukaCylinder.inp  B5L800R70_flukaGrid.inp  B5L900R70_flukaCylinder.inp  B5L900R70_flukaGrid.inp  B6L200R70_flukaCylinder.inp  B6L200R70_flukaGrid.inp  B6L300R70_flukaCylinder.inp  B6L300R70_flukaGrid.inp  B7L200R70_flukaCylinder.inp  B7L200R70_flukaGrid.inp  B7L300R70_flukaCylinder.inp  B7L300R70_flukaGrid.inp  (+8 more)
src/mucol/: __init__.py  fieldmap_utils.py
